# coco

./: CONTRIBUTING.md  Cargo.toml  EXTENSIONS.md  FEATURES.md  README.md  findings.md  iced-blur-alignment.skill  progress.md  rust_out  task_plan.md
.agents/skills/: skill-creator
.github/workflows/: release.yml
2028gic/: 2028全球智能危机.md  make_pdf.py  make_pdf_en.py  raw_text.txt  商品介绍.md
assets/macos/: icon-dark.icns  icon-light.icns
assets/macos/Assets.xcassets/AppIcon.appiconset/: Contents.json
assets/macos/Coco.app/Contents/: Info.plist
assets/macos/Coco.app/Contents/Resources/: AppIcon.icns  Assets.car
docs/: CNAME  config.toml  default.toml  index.html
docs/plans/: 2026-02-24-agent-mode-design.md  2026-02-27-list-hover-calculator-redesign.md  2026-03-06-search-results-bottom-spacing.md  2026-03-09-memory-icon-design.md  2026-03-09-memory-icon-plan.md  2026-03-10-icon-placeholder-design.md  2026-03-10-icon-placeholder-plan.md
scripts/: build-macos.sh  package-macos.sh
src/: app.rs  calculator.rs  clipboard.rs  clipboard_store.rs  commands.rs  config.rs  currency_conversion.rs  favorite_store.rs  history.rs  icons.rs  main.rs  search.rs  styles.rs  utils.rs
src/agent/: mod.rs  process.rs  session.rs  types.rs
src/app/: actions.rs  apps.rs  menubar.rs  pages.rs  tile.rs
src/app/pages/: agent.rs  clipboard.rs  emoji.rs  favorites.rs
src/app/tile/: elm.rs  update.rs
src/platform/: cross.rs  mod.rs
src/platform/macos/: discovery.rs  haptics.rs  mod.rs  windows.rs
