[package]
name = "coco"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
block2 = "0.6"
emojis = "0.8.0"
global-hotkey = "0.7.0"
iced = { version = "0.14.0", features = ["image", "tokio", "markdown"] }
iced_fonts = { version = "0.3", features = ["bootstrap"] }
chrono = { version = "0.4", features = ["serde"] }
icns = "0.3.1"
image = "0.25.9"
libc = "0.2.180"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = [
    "NSAnimationContext",
    "NSImage",
    "NSWorkspace",
    "NSBitmapImageRep",
    "NSImageRep",
    "NSVisualEffectView",
    "NSWindow",
    "NSView",
    "NSRunningApplication",
    "block2",
] }
objc2-application-services = { version = "0.3.2", default-features = false, features = [
    "HIServices",
    "Processes",
] }
objc2-core-graphics = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSGeometry", "NSArray", "NSURL"] }
once_cell = "1.21.3"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tray-icon = "0.21.3"
nucleo-matcher = "0.3"
pinyin = "0.11"
url = { version = "2.5.8", default-features = false }
plist = "1.8.0"
serde_json = "1.0"
